# application

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  unrooted_android.c  usb.c
app/src/main/java/com/example/application/: OnReceive.java  Terminal.java
app/src/main/java/kr/taemin/android/usbserial/driver/: CdcAcmSerialDriver.java  CommonUsbSerialPort.java  CustomProber.java  ProbeTable.java  SerialTimeoutException.java  UsbId.java  UsbSerialDriver.java  UsbSerialPort.java  UsbSerialProber.java
app/src/main/java/kr/taemin/android/usbserial/func/: Board.java
app/src/main/java/kr/taemin/android/usbserial/util/: HexDump.java  MonotonicClock.java  SerialInputOutputManager.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
